# sourceos-syncd

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  TRUST_SURFACE.yaml  pyproject.toml
.sourceos/: manifest.json
adr/: 0001-sourceos-control-plane.md
docs/: agentplane-trust-gate.md  canonical-event-envelope.md  contracts.md  delivery-excellence-scorecard.md  estate-rollout.md  implementation-roadmap.md  lampstand-evidence.md  local-state-store.md  mvp-roadmap.md  orggov-state-integrity-binding.md  policy-decision-normalizer.md  policy-fabric-hook.md  process-provenance-collector.md  semantic-enterprise-state-integrity.md  service-boundary.md  telemetry-noise-control-spec.md
policy/: explanation-codes.v0.1.json
schemas/: orggov-state-integrity-binding.v0.1.schema.json  sourceos-capability.schema.json  sourceos-event.schema.json  sourceos-incident.schema.json  sourceos-launch-manifest.schema.json  sourceos-service.schema.json  sourceos.agent-trust-decision.v1alpha1.schema.json  sourceos.delivery-scorecard.v1alpha1.schema.json  sourceos.event.v0.1.schema.json  sourceos.lampstand-evidence.v1alpha1.schema.json  sourceos.policy-decision.v1alpha1.schema.json  sourceos.policy-explanation-registry.v0.1.schema.json  sourceos.policy-observation.v0.1.schema.json  sourceos.process-provenance.v0.1.schema.json  sourceos.repair-plan.v1alpha1.schema.json  sourceos.state-integrity-report.v1alpha1.schema.json
scripts/: credential-surface  doctor  network-surface  policy-surface  prove-clean  purge
src/: lib.rs  main.rs  models.rs  report.rs
tests/: test_contracts.py  (+16 more)
(+108 files in other folders)
