[package]
name = "sourceos-syncd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SourceOS State Integrity daemon and CLI contracts"
repository = "https://github.com/SourceOS-Linux/sourceos-syncd"

[dependencies]
anyhow = "1.0"
camino = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
