[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sourceos-syncd"
version = "0.1.0"
description = "SourceOS State Integrity daemon: local-first state, repair, provenance, and policy-governed replication substrate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SourceOS" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
sourceos-syncd = "sourceos_syncd.cli:main"
sourceos-syncd-service = "sourceos_syncd.service:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
